re2c_tutorial01/main.c
/* Generated by re2c @PACKAGE_VERSION@ on Sat Aug 01 14:55:35 2015 */
#line 1 "main.re"
#include <stdlib.h>
#include <stdio.h>
#include <string.h>

int scan(char *s, int l)
{
	char *p = s;
	char *q = 0;
#define YYCTYPE         char
#define YYCURSOR        p
#define YYLIMIT         (s+l)
#define YYMARKER        q
#define YYFILL(n)
	
	for(;;)
	{

#line 21 "main.c"
		{
			YYCTYPE yych;

			if ((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
			yych = *YYCURSOR;
			switch (yych) {
			case 0x00:	goto yy10;
			case '+':	goto yy6;
			case '-':	goto yy8;
			case '0':	goto yy2;
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy4;
			default:	goto yy12;
			}
yy2:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy16;
			default:	goto yy3;
			}
yy3:
#line 21 "main.re"
			{ printf("Num\n");	continue; }
#line 61 "main.c"
yy4:
			++YYCURSOR;
			yych = *YYCURSOR;
			goto yy15;
yy5:
#line 20 "main.re"
			{ printf("Num\n");	continue; }
#line 69 "main.c"
yy6:
			++YYCURSOR;
#line 22 "main.re"
			{ printf("+\n");	continue; }
#line 74 "main.c"
yy8:
			++YYCURSOR;
#line 23 "main.re"
			{ printf("-\n");	continue; }
#line 79 "main.c"
yy10:
			++YYCURSOR;
#line 24 "main.re"
			{ printf("EOF\n");	return 0; }
#line 84 "main.c"
yy12:
			++YYCURSOR;
#line 25 "main.re"
			{ printf("ERR\n");	return 1; }
#line 89 "main.c"
yy14:
			++YYCURSOR;
			if (YYLIMIT <= YYCURSOR) YYFILL(1);
			yych = *YYCURSOR;
yy15:
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy14;
			default:	goto yy5;
			}
yy16:
			++YYCURSOR;
			if (YYLIMIT <= YYCURSOR) YYFILL(1);
			yych = *YYCURSOR;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy16;
			default:	goto yy18;
			}
yy18:
#line 19 "main.re"
			{ printf("Oct\n");	continue; }
#line 128 "main.c"
		}
#line 26 "main.re"

	}
}

int main(int argc, char **argv)
{
	if (argc > 1)
	{
		return scan(argv[1], strlen(argv[1]));
	}
	else
	{
		fprintf(stderr, "%s <expr>\n", argv[0]);
		return 1;
	}
}
